--- a/style.css
+++ b/style.css
@@ -54,3 +54,44 @@ body {
 .blackScreen.active {
   display: block; /* 加上 active 時才顯示 */
 }
+
+.windowload {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  background-color: #000000;
+  z-index: 999;
+}
+.winicon {
+  width: 100%;
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 70px;
+}
+.winicon img {
+  width: 45%;
+  height: 45%;
+}
+.spinner {
+  width: 5%;
+  height: 5%;
+  padding: 3px; /* stroke-width / 2 */
+  overflow: visible;
+  box-sizing: border-box;
+}
+
+.spinner > circle {
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 15px;
+  stroke-linecap: round;
+  color: #ffffff;
+}
